[package]
name = "cargo"
version = "0.1.0"
edition = "2018"

[lib]
path = "fake_lib.rs"

[raze]
workspace_path = "//cargo"
target = "x86_64-unknown-linux-gnu"
genmode = "Remote"
output_buildfile_suffix = "BUILD.bazel"


[dependencies]
async-graphql = "1.16"
async-graphql-warp = "1.14.9"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
http = "0.2"
slog = "2.5.2"
sloggers = "1.0.1"
futures = "0.3.5"
failure = "0.1.8"
uuid = "0.8.1"
tonic = "0.2"
tonic-build = { version = "0.2", default-features = false, features = ["transport", "prost"] }
prost = "0.6"
libc = "0.2.22"
eventific = { git = "https://github.com/Joatin/eventific" }
eventific_postgres = { git = "https://github.com/Joatin/eventific" }
strum = "0.18.0"
strum_macros = "0.18.0"
serde = "1.0.114"

[raze.crates.mime_guess.'2.0.3']
gen_buildrs = true
additional_flags = [
  "--edition=2018"
]

[raze.crates.mime_guess.'1.8.8']
gen_buildrs = true
additional_flags = [
  "--edition=2018"
]

[raze.crates.rand_jitter.'0.1.4']
gen_buildrs = true
additional_deps = [
  "@//cargo:libc",
]

[raze.crates.proc-macro-nested.'0.1.6']
gen_buildrs = true

[raze.crates.typenum.'1.12.0']
gen_buildrs = true
patches = [
  "//cargo:typenum.patch"
]

[raze.crates.log.'0.3.9']
additional_flags = [
  "--edition=2018"
]

[raze.crates.log.'0.4.8']
gen_buildrs = true
additional_flags = [
  "--edition=2018"
]

[raze.crates.chrono-tz.'0.5.2']
gen_buildrs = true

[raze.crates.unicase.'2.6.0']
additional_flags = [
  # Rustc is 1.36, enable all optional settings
  "--cfg=__unicase__iter_cmp",
  "--cfg=__unicase__defauler_hasher",
  "--cfg=__unicase__const_fns",
  "--cfg=__unicase__core_and_alloc"
]

[raze.crates.unicase.'1.4.2']
additional_flags = [
  # Rustc is 1.36, enable all optional settings
  "--cfg=__unicase__iter_cmp",
  "--cfg=__unicase__defauler_hasher",
]

[raze.crates.proc-macro2.'1.0.18']
additional_flags = [
    "--cfg=use_proc_macro",
    "--cfg=wrap_proc_macro",
]


[raze.crates.indexmap.'1.4.0']
additional_flags = [
    "--cfg=has_std",
]

[raze.crates.syn.'1.0.33']
gen_buildrs = true

[raze.crates.pest_meta.'2.1.3']
gen_buildrs = true

[raze.crates.async-graphql-parser.'1.14.7']
data_attr = "glob([\"**/*.pest\"])"

[raze.crates.prost-build.'0.6.1']
additional_deps = [
  "@com_google_protobuf//:protoc",
  "@com_google_protobuf//:protoc_lib"
]

[raze.crates.prost-build.'0.6.1'.additional_env]
PROTOC= "external/com_google_protobuf/protoc"
PROTOC_INCLUDE = "/usr/local/include"

[raze.crates.tonic-build.'0.2.0'.additional_env]
PROTOC= "external/com_google_protobuf/protoc"
PROTOC_INCLUDE = "/usr/local/include"

[raze.crates.protobuf.'2.16.2']
gen_buildrs = true
patches = [
  "//cargo:protobuf.patch"
]

