[package]
name = "le_chef"
version = "0.1.0"
authors = ["Joatin Granlund <joatin.granlund@codelabs.se>"]
edition = "2018"


[dependencies]
tokio = { version = "0.2", features = ["macros", "time"] }
clap = "3.0.0-beta.1"
colored = "1.9.3"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
uuid = { version = "0.8", features = ["v4"] }
rand = "0.7.3"
futures = "0.3.5"
failure = "0.1.8"
