package(default_visibility = ["//visibility:private"])

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")


filegroup(
    name = "proto",
    srcs = [
      "proto/recipe.proto"
    ],
    visibility = ["//visibility:public"]
)

k8s_objects(
  name = "recipe",
  objects = [
    "//recipe/command:command"
  ],
  visibility = ["//visibility:public"]
)
