[package]
name = "recipe_api"
version = "0.1.0"
authors = ["Joatin Granlund <granlundjoatin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }
hyper = "0.13.6"
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_hyper = { git = "https://github.com/graphql-rust/juniper" }
slog = "2.5.2"
sloggers = "1.0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
colored = "1.9.3"
chrono = "0.4.11"