
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
  name = "crd",
  objects = [
    "//tools/crd:crd",
  ]
)

k8s_objects(
  name = "all_targets",
  objects = [
    "//helm:helm",
    "//api:api"
  ]
)

genrule(
  name = "setup",
  cmd = "echo \"./$(location setup.sh) $(location //tools/crd:crd.apply) $(location //tools/helm:helm.apply) \" > $(OUTS)",
  outs = ["script.sh"],
  executable = True,
  tools = [
    "//tools/crd:crd.apply",
    "//tools/helm:helm.apply",
    "setup.sh"
  ],
  visibility = ["//visibility:public"]
)
