package(default_visibility = ["//visibility:private"])

load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library")

rust_library(
  name = "recipe_shared",
  srcs = glob(["src/**/*"]),
  deps = [
    "//cargo:eventific",
    "//cargo:strum",
    "//cargo:serde",
    "//cargo:uuid",
  ],
  proc_macro_deps = [
    "//cargo:strum_macros",
  ],
  visibility = ["//recipe:__subpackages__"]
)
